# azurerelaypy

./: README.md  requirements.txt  setup.cfg
src/: __init__.py  _azure_relay_listener.py  utils.py
src/listenerdemo/: __init__.py  _azure_relay_listener.py
test/: cleanup.py  cli.py  regular_polling.py  vm_create_modified.py  vm_create_regular_polling.py
