[metadata]
name = pyazurerelaylistener
version = 0.0.1
author = Kashif Khan
author_email = kashif.khan@microsoft.com
description = Proof of concept for Azure Relay listener
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kashifkhan/azurerelaypy
project_urls =
    Bug Tracker = https://github.com/kashifkhan/azurerelaypy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    websocket-client
[options.packages.find]
where = src